--- a/index.html
+++ b/index.html
@@ -1,8 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
+<style type="text/css">
+	 header {
+    text-align: center;
+    background: url('https://kemiwrites.files.wordpress.com/2017/01/img_20170127_132319.jpg');
+    background-size: cover;
+    color: white;
+    }
+</style>
 </head>
 <body>
+<header>
+<img src="https://s-media-cache-ak0.pinimg.com/736x/18/86/aa/1886aa1913745ae97ae50c0effdda082.jpg" height="175" width="175">
+
+<p><h1>Kemi</h1><p>
 	<h1>Hello World</h1>
 	<p>I'm hosted with GitHub Pages. I am happy!</p>
 </body>
