Move text to body

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 <header>
 <img src="https://s-media-cache-ak0.pinimg.com/736x/18/86/aa/1886aa1913745ae97ae50c0effdda082.jpg" height="175" width="175">
-
+</header>
 <p><h1>Kemi</h1><p>
 	<h1>Hello World</h1>
 	<p>I'm hosted with GitHub Pages. I am happy!</p>
